# Polymer-Agent2

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: tutorial.py
runs/Nov17_19-05-39_MAIL-20/: events.out.tfevents.1763424339.MAIL-20.2244365.0
runs/Nov17_19-06-31_MAIL-20/: events.out.tfevents.1763424391.MAIL-20.2244711.0
runs/Nov17_19-09-40_MAIL-20/: events.out.tfevents.1763424580.MAIL-20.2245784.0
runs/Nov17_19-15-17_MAIL-20/: events.out.tfevents.1763424917.MAIL-20.2247817.0
runs/Nov17_19-16-06_MAIL-20/: events.out.tfevents.1763424966.MAIL-20.2248350.0
runs/Nov17_19-22-23_MAIL-20/: events.out.tfevents.1763425343.MAIL-20.2250239.0
runs/Nov17_19-26-58_MAIL-20/: events.out.tfevents.1763425618.MAIL-20.2251669.0
runs/Nov17_19-29-24_MAIL-20/: events.out.tfevents.1763425764.MAIL-20.2252561.0
runs/Nov17_19-30-41_MAIL-20/: events.out.tfevents.1763425841.MAIL-20.2253052.0
runs/Nov17_19-43-58_MAIL-20/: events.out.tfevents.1763426638.MAIL-20.2258569.0
runs/Nov18_13-46-13_MAIL-20/: events.out.tfevents.1763491573.MAIL-20.2562170.0
transpolymer.egg-info/: PKG-INFO  top_level.txt
transpolymer_pretrained/ckpt/: EPS_best_model.scaler.pkl  Eea_best_model.scaler.pkl  Egb_best_model.scaler.pkl  OPV_best_model_copy.scaler.pkl  PE_I_best_model.scaler.pkl
transpolymer_pretrained/configs/: config_EPS.yaml  config_Eea.yaml  config_Egb.yaml  config_opv.yaml  config_pe.yaml  pyproject.toml
transpolymer_pretrained/core/: __init__.py  dataset.py  download.py  downstream.py  predict.py  test.py
transpolymer_pretrained/mcp/: mcp_integration.py  server_readme.md
transpolymer_pretrained/runs/Dec08_12-19-50_MAIL-20/: events.out.tfevents.1765214390.MAIL-20.2944498.0
transpolymer_pretrained/runs/Dec08_12-20-30_MAIL-20/: events.out.tfevents.1765214430.MAIL-20.2944933.0
transpolymer_pretrained/runs/Dec08_12-28-09_MAIL-20/: events.out.tfevents.1765214889.MAIL-20.2948588.0
transpolymer_pretrained/runs/Dec08_12-33-41_MAIL-20/: events.out.tfevents.1765215221.MAIL-20.2952029.0
transpolymer_pretrained/runs/Dec08_12-36-56_MAIL-20/: events.out.tfevents.1765215416.MAIL-20.2953726.0
transpolymer_pretrained/runs/Dec08_12-47-02_MAIL-20/: events.out.tfevents.1765216022.MAIL-20.2957323.0
transpolymer_pretrained/runs/Dec11_10-26-15_MAIL-20/: events.out.tfevents.1765466775.MAIL-20.3834826.0
transpolymer_pretrained/runs/Dec11_11-28-56_MAIL-20/: events.out.tfevents.1765470536.MAIL-20.3858022.0
transpolymer_pretrained/runs/Dec11_18-13-32_MAIL-20/: events.out.tfevents.1765494812.MAIL-20.3956767.0
transpolymer_pretrained/runs/Dec11_18-21-20_MAIL-20/: events.out.tfevents.1765495280.MAIL-20.3959487.0
transpolymer_pretrained/runs/Dec11_21-21-45_MAIL-20/: events.out.tfevents.1765506105.MAIL-20.4007858.0
transpolymer_pretrained/runs/Dec13_08-24-12_MAIL-20/: events.out.tfevents.1765632252.MAIL-20.1003179.0
transpolymer_pretrained/runs/Dec14_23-39-54_MAIL-20/: events.out.tfevents.1765773594.MAIL-20.1632147.0
transpolymer_pretrained/runs/Dec14_23-50-49_MAIL-20/: events.out.tfevents.1765774249.MAIL-20.1636286.0
transpolymer_pretrained/runs/Dec15_13-40-28_MAIL-20/: events.out.tfevents.1765824028.MAIL-20.1832993.0
transpolymer_pretrained/runs/Dec15_13-43-29_MAIL-20/: events.out.tfevents.1765824209.MAIL-20.1834164.0
transpolymer_pretrained/runs/Dec15_14-18-50_MAIL-20/: events.out.tfevents.1765826330.MAIL-20.1838733.0
transpolymer_pretrained/runs/Dec15_17-22-28_MAIL-20/: events.out.tfevents.1765837348.MAIL-20.1889745.0
transpolymer_pretrained/runs/Dec20_13-27-58_MAIL-20/: events.out.tfevents.1766255278.MAIL-20.2704145.0
transpolymer_pretrained/runs/Dec23_20-40-31_MAIL-20/: events.out.tfevents.1766540431.MAIL-20.3537814.0
transpolymer_pretrained/runs/Dec23_20-53-20_MAIL-20/: events.out.tfevents.1766541200.MAIL-20.3548519.0
transpolymer_pretrained/runs/Dec25_15-24-35_MAIL-20/: events.out.tfevents.1766694275.MAIL-20.3985270.0
transpolymer_pretrained/runs/Jan02_16-02-02_MAIL-20/: events.out.tfevents.1767387722.MAIL-20.1898173.0
transpolymer_pretrained/scripts/: data_create.ipynb  data_create.py
transpolymer_pretrained/utils/: __init__.py  config.py  path_utils.py
transpolymer_pretrained_polyagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+4 files in other folders)
